# legion

./: .cspell.json  .editorconfig  .gitignore  .isort.cfg  .markdownlint-cli2.yaml  .markdownlint.yaml  .sqlfluff  .yamllint.yaml  Pipfile  README.md  building_example.py  city_example.py  graph.py  graph_example.py  kingdom_example.py  legion.py  legion2.py  prompts.md  pyproject.toml  pytest.ini  scenario_example.py
.cspell/: campaigns.txt  cities.txt  python_extras.txt  troops.txt
.github/: labeler.yaml
.github/workflows/: main.yaml  pr_labeler.yaml
data/: buildings.yaml  cities.yaml
docs/: README.md  sql_code_style_guide.md
examples/: building.py  city.py  kingdom.py  scenario.py
modules/: README.md  building.py  buildings.py  buildings_data.py  city.py  city_data.py  city_defenses.py  display.py  effects.py  exceptions.py  geo_features.py  kingdom.py  resources.py  scenario.py
tests/: README.md  conftest.py  test_building.py  test_buildings_data.py  test_cities_data.py  test_city.py  test_effects.py  test_geo_features.py  test_kingdom.py  test_placeholder.py  test_resources.py
